# opspilot-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analyses.py  auth.py  chat.py  demo.py  health.py  incidents.py  knowledge.py  reports.py  router.py  uploads.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  analysis.py  chat.py  incident.py  knowledge.py  report.py  upload.py  user.py
backend/app/schemas/: analysis.py  auth.py  chat.py  report.py  upload.py
backend/app/services/analysis/: engine.py  prompts.py  sampler.py
backend/app/services/demo/: fixtures.py  seed.py
backend/app/services/llm/: anthropic_provider.py  base.py  factory.py  json_utils.py  openai_compatible.py
backend/app/services/parsers/: base.py  detectors.py  formats.py  service.py
backend/app/services/parsers/normalizers/: cloud.py  common.py  text.py  windows.py
backend/app/services/rag/: chunking.py  ingest.py  retriever.py
backend/app/services/reports/: generator.py
backend/app/workers/: celery_app.py  db.py  tasks.py
backend/tests/: test_analysis_coerce.py  test_api_auth.py  test_chunking.py  test_demo.py  test_detectors.py  test_formats.py  test_json_utils.py  test_normalizers.py  test_sampler.py  test_security.py
docs/: api.md  architecture.md  (+3 more)
(+30 files in other folders)
