[project]
name = "opspilot-ai"
version = "0.1.0"
description = "AI copilot for systems, cloud and platform engineers: log analysis, RAG, incident reports."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "pgvector>=0.3",
    "redis>=5.0",
    "celery>=5.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "python-evtx>=0.8",
    "jinja2>=3.1",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "tenacity>=8.3",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "aiosqlite>=0.20",
]

[tool.setuptools]
packages = { find = { include = ["app*"] } }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
# Demo fixtures are literal log/report data; long lines are inherent to the content.
"app/services/demo/fixtures.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
